--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
+    "react-spinkit": "^3.0.0",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
